[REGRESSION][[css-flexbox] child elements are shrunk to fit into container after r286206 https://bugs.webkit.org/show_bug.cgi?id=234361

Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-flexbox/flexbox-iframe-intrinsic-size-001-expected.html: Added.
* web-platform-tests/css/css-flexbox/flexbox-iframe-intrinsic-size-001.html: Added.
* web-platform-tests/css/css-flexbox/w3c-import.log:

Source/WebCore:

The patch from r286206 fixed the sizing of flex items with intrinsic aspect ratios but no intrinsic sizes
as happens with many SVG images. That fix was however way too general as it was targeted at any replaced
element. The problem of generalizing it is that replaced elements as iframes do not have intrinsic aspect
ratios although they have a default size (300x150px). Constraining the new code to SVG images fixes the
regression.

Replacing is<RenderReplaced>(child) with is<RenderSVGRoot>(child) wouldn't be enough as we need to consider
the newly added LegacySVGRoot that was added as part of the SVG layout refactoring.

Test: imported/w3c/web-platform-tests/css/css-flexbox/flexbox-iframe-intrinsic-size-001.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::isSVGRootWithIntrinsicAspectRatio):
(WebCore::childHasAspectRatio):
(WebCore::RenderFlexibleBox::computeMainSizeFromAspectRatioUsing const):
(WebCore::RenderFlexibleBox::childHasComputableAspectRatio const):
(WebCore::isRenderReplacedWithIntrinsicAspectRatio): Deleted.


Canonical link: https://commits.webkit.org/245497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287355 268f45cc-cd09-0410-ab3c-d52691b4dbfc